--- a/accounts/static/accounts/css/accounts.css
+++ b/accounts/static/accounts/css/accounts.css
@@ -5,19 +5,16 @@
 /*--------------------
        FORM
 ----------------------*/
-.container {
-    border-bottom: 1px solid black;
-}
 
+form {
+    width: 100%;
+    margin-bottom: 100px
+}
 
 
 /*--------------------
     Log in page
 ----------------------*/
-
-form {
-    margin-bottom: 200px;
-}
 
 #login_form {
     width: 15%;
@@ -44,12 +41,11 @@ form {
     Registration page
 ----------------------*/
 
-
 #reg_form {
-    width: 63%;
+    width: 100%;
     height: 65vh;
-    margin: 10px auto;
-    }
+    /*margin: 10px auto;*/
+}
 
 
 #reg_form label {
@@ -64,4 +60,5 @@ form {
 .sign_up {
     display: flex;
     justify-content: flex-end;
+    border-top: 1px solid black;
 }
