--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -34,6 +34,6 @@
     </section>
 
     <aside class="sign_up">
-        <h4>No account? <a href="/accounts/register">Sign up now!</a></h4>
+        <h4>No account? <a href="/accounts/register/">Sign up now!</a></h4>
     </aside>
 {% endblock %}
