--- a/collection/static/collection/css/collection.css
+++ b/collection/static/collection/css/collection.css
@@ -72,6 +72,7 @@
     display: flex;
     justify-content: center;
     border-radius: 5px;
+    box-shadow: 0 0 15px #2b2b2b;
 }
 
 /* List Keys bolded */
@@ -87,28 +88,33 @@
 
 
 /* ----- BUTTONS for downloads and links ------*/
-#coll_btn {
+
+/*.coll_links_area {*/
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*justify-content: center;*/
+/*}*/
+
+.additional_links_area {
+    width: 95%;
+    margin: 5% 0 15% 0;
+}
+
+.coll_links_area {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
     flex-wrap: wrap;
 }
 
-.btn {
-    margin: 20px 30px;
-    border-radius: 10px;
-}
-
-#collectible_btns {
+#collectible_option_btns {
     display: flex;
     justify-content: center;
-    border: 2px solid black;
+    border-top: 2px solid black;
     margin-top: 3%;
-    border-radius: 25px;
+
 }
 
 #add_links {
-    align-self: flex-end;
+    margin-bottom: 30px;
 }
 
 #weblinks {
@@ -128,7 +134,10 @@
    Collectible Edit
 ----------------------*/
 
-
+.delete-row, .add-row {
+    color: #000000;
+    font-size: 1.3em;
+}
 
 
 /*-------------------------
