--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,12 +13,13 @@ Home Page for Shelfio Web Application - created June 17, 2017 by Steve Hanlon
 ----------------------*/
 
 a {
-    /*color: #0D5FFA;*/
-    color: #f7f7f7;
+    color: #f9f9f9;
+    transition: color .3s;
 }
 
 a:hover {
-    color: #0D5FFA;
+    color: #000;
+    text-decoration: none;
 }
 
 input {
@@ -83,7 +84,7 @@ main {
     background-color: #FFDA00;
     height: auto;
     padding-top: 4%;
-    padding-bottom: 14%;
+    padding-bottom: 5%;
 }
 
 /* Header Image Background - Change the URL below to your image path (example: ../images/background.jpg) */
@@ -134,14 +135,27 @@ h3 {
 
 /* BUTTON */
 .btn {
-	font-size:20px;
-	background-color:#E84B00;
+	font-size: 20px;
+	background-color: #E84B00;
+    margin: 20px 30px;
 	padding: 20px 60px;
 	color: #fff;
     border: 1px solid black;
-	border-radius: 2px;
+	border-radius: 10px;
     transition: background-color .6s;
 }
+
+.btn_small {
+	font-size: 15px;
+	background-color: #E84B00;
+    margin: 20px 30px;
+	padding: 15px 40px;
+	color: #fff;
+    border: 1px solid black;
+	border-radius: 10px;
+    transition: background-color .6s;
+}
+
 
 
 .btn-12Wrapper .btn:hover {
