Fixes MultiValueDictKeyError - Collectible_edit.html when editing URLs now fixed with addition of {{ link_form.id }} in FOR loop.

--- a/collection/static/collection/css/collection.css
+++ b/collection/static/collection/css/collection.css
@@ -72,6 +72,9 @@
     display: flex;
     justify-content: center;
     border-radius: 5px;
+}
+
+.coll_img img {
     box-shadow: 0 0 15px #2b2b2b;
 }
 
