--- a/collection/templates/collection/collectible.html
+++ b/collection/templates/collection/collectible.html
@@ -30,7 +30,6 @@
             {# Collectible Heading #}
             <h3 class="coll_header">{{ collectible.name }}</h3>
 
-
             {# Collectible description #}
             <section class="description">
             <p>{{ collectible.description }}</p>
@@ -56,13 +55,14 @@
                         {% endfor %}
                     </div>
             </div>
+        </div>
     </section>
 
     <aside id="collectible_option_btns">
         <div>
-            <button id="edit_btn" class="btn"><a href="/{{ request.user }}/collectible/edit/{{ collectible.slug }}">Edit</a></button>
-            <button id="addnew_btn" class="btn"><a href="/{{ request.user }}/collectible/create/">Add Another</a></button>
-            <button id="view_coll_btn" class="btn"><a href="/{{ request.user }}/collection/{{ collectible.collection.slug }}">View Collection</a></button>
+            <a id="edit_btn" class="save btn btn-default" href="/{{ request.user }}/collectible/edit/{{ collectible.slug }}">Edit</a>
+            <a id="addnew_btn" class="save btn btn-default" href="/{{ request.user }}/collectible/create/">Add Another</a>
+            <a id="view_coll_btn" class="save btn btn-default" href="/{{ request.user }}/collection/{{ collectible.collection.slug }}">View Collection</a>
         </div>
     </aside>
 
