--- a/templates/home.html
+++ b/templates/home.html
@@ -74,6 +74,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <!-- Optional logo -->
+                 <a class="navbar-logo" href="#">
+                    <img src="http://placehold.it/150x50&text=Logo" alt="">
+                </a>
+                <!-- Word Brand -->
                 <a class="navbar-brand" href="#">Shelfio</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
