added collectible_option_buttons on Modal Window so User can access edit mode easier

--- a/collection/static/collection/css/collection.css
+++ b/collection/static/collection/css/collection.css
@@ -111,9 +111,7 @@
 #collectible_option_btns {
     display: flex;
     justify-content: center;
-    border-top: 2px solid black;
-    margin-top: 3%;
-
+    margin: 1%;
 }
 
 #add_links {
