--- a/templates/home.html
+++ b/templates/home.html
@@ -62,7 +62,6 @@
 {#    {% endif %}#}
 
 
-
     {#  Navigation Bar  #}
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
@@ -75,9 +74,9 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- Optional logo -->
-                 <a class="navbar-logo" href="#">
-                    <img src="http://placehold.it/150x50&text=Logo" alt="">
-                </a>
+{#                 <a class="navbar-logo" href="#">#}
+{#                    <img src="http://placehold.it/150x50&text=Logo" alt="">#}
+{#                </a>#}
                 <!-- Word Brand -->
                 <a class="navbar-brand" href="#">Shelfio</a>
             </div>
