--- a/collection/templates/collection/collection.html
+++ b/collection/templates/collection/collection.html
@@ -26,6 +26,7 @@
 
             {# FOR LOOP - Show all collectibles in Collection #}
              {% for collectible in collectibles %}
+                 {{ collectible.id }}
                 <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                     <div data-collectible="{{ forloop.counter }}" class="myBtn collectible_gallery">
                         {# Link to Modal window of collectible details #}
@@ -78,13 +79,25 @@
                                 <h4 id="add_links">Additional Links:</h4>
                                     <div class="coll_links_area">
                                         {% for link in collectible.links.all %}
+                                            {# to solve spaces in URLs us regex (?P<name>[\w\ ]+) #}
                                             <a class="btn_small" href="{{ link.url }}">{{ link.name }}</a>
                                         {% endfor %}
-{#                                        <input type="button" onclick="window.location='{{ link_form.url }}';_gaq.push(['_trackEvent', 'Downloads', 'eBooks', 'Burmese Monks Tales PDF']);" name="Add" value="{{ link_form.name }}" class="btn">#}
+                                            <!-- input button as PDF download -->
+{#                                          <input type="button" onclick="window.location='{{ link_form.url }}';_gaq.push(['_trackEvent', 'Downloads', 'eBooks', 'Burmese Monks Tales PDF']);" name="Add" value="{{ link_form.name }}" class="btn">#}
                                     </div>
                                 </div>
                             </div>
                         </section>
+
+                        <!-- EDIT BUTTON AREA -->
+                        <aside id="collectible_option_btns">
+                            <div>
+                                <a id="edit_btn" class="save btn btn-default" href="/{{ request.user }}/collectible/edit/{{ collectible.slug }}">Edit</a>
+                                <a id="addnew_btn" class="save btn btn-default" href="/{{ request.user }}/collectible/create/">Add Another</a>
+                                <a id="view_coll_btn" class="save btn btn-default" href="/{{ request.user }}/collection/{{ collectible.collection.slug }}">View Collection</a>
+                            </div>
+                        </aside>
+
                     </div>  <!-- end of .modal-content -->
                 </div> <!-- end of #myModal -->
 
