--- a/templates/home.html
+++ b/templates/home.html
@@ -73,9 +73,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <!-- Optional logo -->
+{#                <!-- Optional logo -->#}
 {#                 <a class="navbar-logo" href="#">#}
-{#                    <img src="http://placehold.it/150x50&text=Logo" alt="">#}
+{#                    <img src="static/images/shelfio_logo.jpg" alt="">#}
 {#                </a>#}
                 <!-- Word Brand -->
                 <a class="navbar-brand" href="#">Shelfio</a>
