--- a/templates/footer.html
+++ b/templates/footer.html
@@ -5,10 +5,14 @@
         <footer>
             {% block footer %}
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-lg-12 copyright-message">
                         <p>Copyright &copy; SHELFIO 2017</p>
                     </div>
                 </div>
+                <div>
+                    <button id='logout_btn'><a href="/">Log out</a></button>
+                </div>
+
             {% endblock %}
         </footer>
 
