--- a/templates/home.html
+++ b/templates/home.html
@@ -25,6 +25,10 @@
 
     {%  block extra_head %}
 
+        <!-- Reset and Normalize CSS -->
+        <link rel="stylesheet" type="text/css" href="{% static "vendor/normalize.css" %}">
+        <link rel="stylesheet" type="text/css" href="{% static "vendor/reset.css" %}">
+
          <!-- jQuery UI CSS -->
         <link rel="stylesheet" href="{% static "vendor/jquery-ui.min.css" %}">
         <link rel="stylesheet" href="{% static "vendor/jquery-ui.structure.min.css" %}">
