--- a/collection/templates/collection/collections_public.html
+++ b/collection/templates/collection/collections_public.html
@@ -3,7 +3,7 @@
 {% extends 'base.html' %}
 
     {%  block title %}
-    <title>Collection Gallery</title>
+    <title>Public Collections Gallery</title>
     {% endblock %}
 
     {% load static %}
