Added Logged In on Nav

--- a/collection/templates/collection/collectible.html
+++ b/collection/templates/collection/collectible.html
@@ -58,6 +58,7 @@
         </div>
     </section>
 
+    {% if request.user.is_authenticated %}
     <section>
      <!-- EDIT BUTTON AREA -->
         <!--Arrows to open and close Button Panel-->
@@ -76,5 +77,6 @@
         </aside>
 
     </section>
+    {% endif %}
 
 {% endblock %}
