--- a/templates/base.html
+++ b/templates/base.html
@@ -90,6 +90,9 @@
                             <a href="/accounts/login">Log In</a>
                         </li>
                     </ul>
+                    <aside id="logged_in">
+                        <p>You are logged in as {{ request.user }}</p>
+                    </aside>
 
                 </div>
                 <!-- /.navbar-collapse -->
