Lost Log-in functionality so recoded that.  It works again.

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -10,7 +10,7 @@
                     </div>
                 </div>
                 <div>
-                    <button id='logout_btn'><a href="/">Log out</a></button>
+                    <button id='logout_btn'><a href="{% url 'accounts:logout' %}">Log out</a></button>
                 </div>
 
             {% endblock %}
